Fix buttons z-index

--- a/src/components/buttons/Button/Button.module.css
+++ b/src/components/buttons/Button/Button.module.css
@@ -7,6 +7,7 @@
 	border: 0.1rem solid var(--gray-300);
 	font-size: var(--font-16);
 	color: var(--gray-900);
+	z-index: 999;
 }
 
 .primary {
